--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p>Join over 300,000 users to stay organized and meet daily goals!</p>
                 </div>
                 <div class="buttons-container">
-               <button> <a href="./sign_up/index.html">SIGN UP</a></button>
+               <button> <a href="./SIGN_UP/index.html">SIGN UP</a></button>
                <button> <a href="./sign_in/index.html">SIGN IN</a></button>
                 </div>
                </form>
