--- a/skip/index.html
+++ b/skip/index.html
@@ -14,19 +14,19 @@
             <div class="carousel-inner my-5">
                 <h1 class="mt-4">Todo List</h1>
                 <div class="carousel-item active">
-                        <img src="images/Success 1.png" alt="" class="img-fluid">
+                        <img src="images/Success 1.png" alt="" class="img-fluid img_he1">
                     <h3 class=" text-capitalize font-weight-bolder">start and complete your life goal!</h3>
-                    <h2 class="mt-5 font-weight-bold"><a href="../"></a></h2>
+                    <h2 class="mt-5 font-weight-bold"><a href="../home/index.html">Skip</a></h2>
                 </div>
                 <div class="carousel-item">
-                        <img src="images/Subscribe 1.png" alt="jerry" class="img-fluid">
+                        <img src="images/Subscribe 1.png" alt="jerry" class="img-fluid img_he2">
                     <h3 class=" text-capitalize font-weight-bolder">share your progress!</h3>
-                    <h2 class="mt-5 font-weight-bold">Skip!</h2>
+                    <h2 class="mt-5 font-weight-bold"><a href="../home/index.html">Skip</a></h2>
                 </div>
                 <div class="carousel-item ">
                         <img src="images/05.Data 1.png" alt="jerry" class="img-fluid">
                     <h3 class=" text-capitalize font-weight-bolder my-5">organise and define task</h3>
-                    <h2 class="mt-5 font-weight-bold">Skip!</h2>
+                    <h2 class="mt-5 font-weight-bold"><a href="../home/index.html">Skip</a></h2>
                 </div>
             </div>
             <ul class="carousel-indicators">
