--- a/skip/index.html
+++ b/skip/index.html
@@ -15,12 +15,12 @@
                 <h1 class="mt-4">Todo List</h1>
                 <div class="carousel-item active">
                         <img src="images/Success 1.png" alt="" class="img-fluid img_he1">
-                    <h3 class=" text-capitalize font-weight-bolder">start and complete your life goal!</h3>
+                    <h3 class=" text-capitalize font-weight-bolder">start and complete your life goal</h3>
                     <h2 class="mt-5 font-weight-bold"><a href="../home/index.html">Skip</a></h2>
                 </div>
                 <div class="carousel-item">
                         <img src="images/Subscribe 1.png" alt="jerry" class="img-fluid img_he2">
-                    <h3 class=" text-capitalize font-weight-bolder">share your progress!</h3>
+                    <h3 class=" text-capitalize font-weight-bolder">share your progress</h3>
                     <h2 class="mt-5 font-weight-bold"><a href="../home/index.html">Skip</a></h2>
                 </div>
                 <div class="carousel-item ">
