--- a/skip/index.html
+++ b/skip/index.html
@@ -15,17 +15,17 @@
                 <h1 class="mt-4">Todo List</h1>
                 <div class="carousel-item active">
                         <img src="images/Success 1.png" alt="" class="img-fluid img_he1">
-                    <h3 class=" text-capitalize font-weight-bolder">Start and complete your life goals</h3>
+                    <h3 class="font-weight-bolder">Start and complete your life goals</h3>
                     <h2 class="mt-5 font-weight-bold"><a href="../home/index.html">Skip</a></h2>
                 </div>
                 <div class="carousel-item">
                         <img src="images/Subscribe 1.png" alt="jerry" class="img-fluid img_he2">
-                    <h3 class=" text-capitalize font-weight-bolder">Share your progress</h3>
+                    <h3 class="font-weight-bolder">Share your progress</h3>
                     <h2 class="mt-5 font-weight-bold"><a href="../home/index.html">Skip</a></h2>
                 </div>
                 <div class="carousel-item ">
                         <img src="images/05.Data 1.png" alt="jerry" class="img-fluid">
-                    <h3 class=" text-capitalize font-weight-bolder my-5">Organise and define task</h3>
+                    <h3 class="font-weight-bolder my-5">Organise and define task</h3>
                     <h2 class="mt-5 font-weight-bold"><a href="../home/index.html">Skip</a></h2>
                 </div>
             </div>
