--- a/TDA.html
+++ b/TDA.html
@@ -31,6 +31,7 @@
                  <li class="nav_link"> <a href="../home/index.html"> home</a></li>
                  <li class="nav_link"> <a href="../About Us/index.html"> about</a></li>
                  <li class="nav_link"> <a href="../profile/index.html"> profile</a></li>
+		 <li class="nav_link"> <a href="../contact us/index.html"> profile</a></li>
             </ul> 
 
         </div>
