--- a/TDA.html
+++ b/TDA.html
@@ -49,12 +49,12 @@
 		
 		<!-- New Todo -->
 		<section class="create-todo">
-			<h3>CREATE A TODO</h3>
+			<h3>CREATE A TO-DO</h3>
 			<form id="new-todo-form">
-				<h4>What's on your todo?</h4>
+				<h4>What's on your to-do?</h4>
 				<input 
 					type="text" 
-					placeholder="Todo Name"
+					placeholder="To-do Name"
 					name="content"
 					id="content" />
 				
@@ -79,7 +79,7 @@
 
 		<!-- Todo List -->
 		<section class="todo-list">
-			<h3>TODO LIST</h3>
+			<h3>TO-DO LIST</h3>
 			<div class="list" id="todo-list"></div>
 		</section>
 		<!-- End of Todo List -->
