--- a/TDA.html
+++ b/TDA.html
@@ -72,7 +72,7 @@
 					</label>
 				</div>
 
-				<input type="submit" value="Add todo" />
+				<input type="submit" value="Add to-do" />
 			</form>
 		</section>
 		<!-- End of New Todo -->
