--- a/TDA.html
+++ b/TDA.html
@@ -63,12 +63,12 @@
 					<label>
 						<input type="radio" name="category" id="category1" value="business" /> 
 						<span class="bubble business"></span>
-						<div>Work List</div>
+						<div>Work</div>
 					</label>
 					<label>
 						<input type="radio" name="category" id="category2" value="personal" />
 						<span class="bubble personal"></span>
-						<div>Personal List</div>
+						<div>Personal</div>
 					</label>
 				</div>
 
