--- a/sign_in/index.html
+++ b/sign_in/index.html
@@ -26,12 +26,12 @@
 
 
         <button type="submit" id="btn" >Continue</button>
-        <p>or</p>
+        <!--<p>or</p>
 
 
         <button>Continue with Apple</button>
         <button>Continue with Google</button>
-        <button>Continue with Facebook</button>
+        <button>Continue with Facebook</button>-->
 
         <p class="register">Don't have an account?  </p>
         <p class="pro"><a href="../SIGN_UP/index.html">Create your profile</a></p>
