--- a/SIGN_UP/index.html
+++ b/SIGN_UP/index.html
@@ -81,13 +81,13 @@
 
 
        <button type="submit" id="btn">Register<button>
-        <p>or</p>
+        <!--<p>or</p>
 
 
 
         <button>Sign up with Apple</button>
         <button>Sign up  with Google</button>
-        <button>Sign up  with Facebook</button>
+        <button>Sign up  with Facebook</button>-->
 
         <p class="register">Already have an account?  </p>
         <p class="pro"><a href="../sign_in/index.html">Sign In</a></p>
