--- a/home/index.html
+++ b/home/index.html
@@ -14,7 +14,7 @@
     <div id="container-box">
 
         <div class="icon">
-            <a href="../sign_in/index.html"><i class="fa fa-arrow-left"></i><a>
+            <a href="../sign_in/index.html"><i class="fa fa-long-arrow-left"></i><a>
           </div>
           
         <!-- Header Section -->
@@ -28,7 +28,7 @@
         <!-- Image Section -->
         <section id="image">
             <div id="profile-pic">
-                <img src="./images/picture.jpg" alt="blank-profile-picture" id="photo">
+                <img src="./images/pix.jpg" alt="blank-profile-picture" id="photo">
             </div>
         </section>
 
